apps/crafty/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crafty
  labels:
    app.kubernetes.io/name: crafty
    app.kubernetes.io/part-of: crafty
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
